2002-07-19  Ulrich Drepper  <drepper@redhat.com>

	* errno.c (__errno_location): Don't define unless !USE_TLS
	|| !HAVE___THREAD.
	* sysdeps/i386/pt-machine.c: Protect C code with #ifndef ASSEMBLER.
	* sysdeps/i386/tls.h: Likewise.
	* sysdeps/i386/useldt.h: Likewise.
	* sysdeps/i386/i686/pt-machine.h: Likewise.

2002-07-02  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/pspinlock.c: Don't include <sgidefs.h>.  Always
	use ll/sc.
	* sysdeps/mips/pt-machine.h: Likewise.

2002-07-14  Ulrich Drepper  <drepper@redhat.com>

	* manager.c (pthread_handle_create): Initialize self-reference in
	descriptor.

2002-07-01  Jakub Jelinek  <jakub@redhat.com>

	* Examples/ex9.c (main): Remove unused th variable.

2002-07-10  Ulrich Drepper  <drepper@redhat.com>

	* wrapsyscall.c: Add __nanosleep alias.
	* Versions (GLIBC_2.2.6): Add __nanosleep.
	* bug-sleep.c: New file.
	* Makefile (tests): Add bug-sleep.

2002-06-19  Steven Munroe  <sjmunroe@vnet.ibm.com>

	* Examples/ex9.c (main):  Use list of children and join them.
	(thread): Do not call exit.

2002-06-20  Ulrich Drepper  <drepper@redhat.com>

	* spinlock.c (wait_node_alloc): We cannot use compare-and-exchange.
	Unconditionally use the code using spinlock.  Use __pthread_release
	to free a spinlock.
	(wait_node_free): Likewise.
	(__pthread_acquire, __pthread_release): Unconditionally define.

2002-06-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/pt-machine.h (MEMORY_BARRIER): Fix typo.

2002-05-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/pt-machine.h (MEMORY_BARRIER): Use __sync_synchronize.

2002-05-21  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h (pthread_create): Rename first
	parameter.
	(pthread_cancel): Likewise.
	* internals.h (__pthread_create_2_1): Likewise.
	* sysdeps/unix/sysv/linux/bits/sigthread.h (pthread_kill): Likewise.

2002-05-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/alpha/pt-machine.c (THREAD_SELF): Remove clobber.
	Patch by Glen Nakamura <gen@flex.com>.
